# synthy

./: Cargo.toml
src/: editor.rs  lib.rs  style.css  ui.rs  util.rs
src/util/: curve_point.rs  extensions.rs  math.rs  mod.rs  vizia_extensions.rs
src/widgets/: axis.rs  drag.rs  envelope.rs  knob.rs  mod.rs  mseg.rs  slider.rs  slider_discrete.rs  theme.rs  xy_pad.rs  zoomer.rs
src/widgets/mseg/: graph.rs  mod.rs  ticks.rs  util.rs
