[package]
name = "synthy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# add some dependencies here
log = "0.4"
simplelog = "0.11"
log-panics = "2"
fundsp = "0.3.2"
num-derive = "0.3"
num-traits = "0.2"
wmidi = "4"
dirs = "4"

nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs"] }
glam = "0.20"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909"}
raw-window-handle = "0.4"
atomic_float = "0.1"
vizia = { git = "https://github.com/vizia/vizia", features = ["baseview"], default-features = false }
serde = "1"
femtovg = "*"

[dev-dependencies]
assert_approx_eq = "1"